5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4346/executions/1577_1327.log
== TEST (2019-03-14 19:21:36) 
-- CODE:
print ( 35 
		)
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:21:40) 
-- CODE:
print ( 35 
		
-- ERROR:
File "XXXX", line 3
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:21:41) 
-- CODE:
print ( 35 
		
-- EXECUTION TIME:
0.160349
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 3
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:21:59) 
-- CODE:
print ( 35 )
		
-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:22:00) 
-- CODE:
print ( 35 )
		
-- EXECUTION TIME:
0.165685
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
